fix title of event breaking out of box

--- a/src/scss/event.scss
+++ b/src/scss/event.scss
@@ -183,6 +183,7 @@
 		text-align: left;
 		position: relative;
 		z-index: 2;
+		word-wrap: break-word;
 	}
 
 	&__datetime {
